Added Rect router dom for multi page navigation

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -33,7 +33,7 @@
         background-color: transparent;
 
        &:hover{
-        background-color: #E67E22;
+        background-color: #F4A562;
         border-color: #E67E22;
        } 
     }
