--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,6 +1,7 @@
 .navbar {
     display: flex;
-    justify-content:center;
+    flex-direction: column;
+    align-items:center;
     background-color:#E67E22;
 
     .container {
@@ -40,4 +41,12 @@
 
 }
     }
+.menu{
+    width: 1400px;
+    padding: 10px 0px;
+    display: flex;
+    justify-content: space-between;
+    font-weight: 300;
+    color: gray;
+}
 }
