--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -41,12 +41,19 @@
 
 }
     }
+
+    hr{
+        width: 100%;
+        height: 0;
+        border: 0.5px solid white;
+    }
 .menu{
     width: 1400px;
     padding: 10px 0px;
     display: flex;
     justify-content: space-between;
     font-weight: 300;
-    color: gray;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
 }
 }
