--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -3,6 +3,15 @@
     flex-direction: column;
     align-items:center;
     background-color:#E67E22;
+    color: black;
+    transition: 0.5s all ease;
+    position:sticky;
+    top: 0;
+
+    &.active{
+        background-color: white;
+        color: black;
+    }
 
     .container {
         width: 1400px;
@@ -45,7 +54,7 @@
     hr{
         width: 100%;
         height: 0;
-        border: 0.5px solid white;
+        border: 0.5px solid black;
     }
 .menu{
     width: 1400px;
@@ -53,7 +62,7 @@
     display: flex;
     justify-content: space-between;
     font-weight: 300;
-    color: white;
+    color: black;
     font-family: 'Montserrat', sans-serif;
 }
 }
